--- a/app/views/shared/_booking_request_card.html.erb
+++ b/app/views/shared/_booking_request_card.html.erb
@@ -1,11 +1,20 @@
 <div class="card mb-3">
-  <div class="card-body">
+  <% case booking.status
+   when "cancelled" %>
+  <div class="card-body border border-danger">
+  <% when "pending" %>
+  <div class="card-body border border-warning">
+  <% when "completed" %>
+  <div class="card-body border border-success">
+  <% when "booked" %>
+  <div class="card-body border border-info">
+  <% end %>
     <h5 class="card-title">Booking Request ID: <%= booking.id %></h5>
     <p class="card-text"><%= link_to booking.job.title, job_path(booking.job) %></p>
     <p class="card-text"><%= booking.start_date %></p>
     <p class="card-text"><%= booking.end_date %></p>
     <p class="card-text"><%= booking.job.description %></p>
-    <p class="card-text"><%= booking.job.available %></p>
+    <%# <p class="card-text"><%= booking.job.available %>
     <p class="card-text">Booking owner: <%= booking.job.user.first_name %></p>
     <div data-controller="toggle" class="my-2">
       <button data-action="click->toggle#book" class="btn btn-outline-primary">Manage Request</button>
