Fixed review flow and review link on the booking card

--- a/app/views/jobs/new.html.erb
+++ b/app/views/jobs/new.html.erb
@@ -1,8 +1,8 @@
-<%= render "form", booking: @job %>
+<%= render "form", job: @job %>
 <%= form_for @job, html: { multipart: true } do |f| %>
 
   <%= f.label :images, 'Job Images' %>
-  <%= f.file_field :images, multiple: true %>
+  <%= f.file_field :photos, multiple: true %>
 
   <%= f.submit 'Create Job' %>
 <% end %>
