--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,19 +1,10 @@
 <h1>New Review</h1>
 
-<%= form_for [@job, @booking, @booking.reviews.build] do |f| %>
-  <div>
-    <%= f.label :rating %>
-    <%= f.number_field :rating, min: 1, max: 5 %>
-  </div>
-
-  <div>
-    <%= f.label :description %>
-    <%= f.text_area :description %>
-  </div>
-
-  <div>
-    <%= f.submit "Create Review" %>
-  </div>
-<% end %>
-
-<%= link_to "Back to Job", job_path(@job) %>
+<div class="jobs-form">
+  <%= simple_form_for [@job, @booking, @review] do |f| %>
+    <%= f.input :title %>
+    <%= f.input :description %>
+    <%= f.input :rating, collection: [1, 2, 3, 4, 5]  %>
+    <%= f.button :submit %>
+  <% end %>
+</div>
