--- a/app/assets/stylesheets/jobs.scss
+++ b/app/assets/stylesheets/jobs.scss
@@ -1,17 +1,3 @@
-// Graphical variables
-@import "config/fonts";
-@import "config/colors";
-@import "config/bootstrap_variables";
-@import 'jobs';
-
-// External libraries
-@import "bootstrap";
-@import "font-awesome";
-
-// Your CSS partials
-@import "components/index";
-@import "pages/index";
-@import "jobs/new";
 
 .job-card {
   width: calc(33.33% - 40px); /* 40px is the combined margin and padding */
@@ -36,7 +22,6 @@
   height: auto;
   border-radius: 8px;
 }
-
 
 .card-bottom {
   padding-top: 15px;
@@ -70,5 +55,10 @@
 
   p {
     margin-bottom: 8px;
+  }
+
+  .dashboard-job-card {
+    /* Add any specific styles for the dashboard job card */
+    text-align: left; /* Override text-align center */
   }
 }
