Multiple phots for the job

--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -4,7 +4,7 @@
     <%= f.input :description %>
     <%= f.input :address %>
     <%= f.input :price %>
-     <%= f.file_field :photo %>
+    <%= f.input :photos, as: :file, input_html: { multiple: true } %>
     <%= f.input :available_from,
             as: :string,
             input_html: { data: { controller: "datepicker" } } %>
