--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -21,6 +21,24 @@
   margin-bottom: 20px;
 }
 
+.footer-social-links {
+  ul {
+    display: flex;
+    justify-content: center;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+
+  li {
+    margin: 10px 10px;
+  }
+
+  a {
+    text-decoration: none;
+  }
+}
+
 @media (max-width: 768px) {
   .footer-links {
     width: calc(100% - 40px);
