--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -3,7 +3,22 @@
       <%= link_to "Home", root_path %>
       <%= link_to "See jobs", jobs_path %>
       <%= link_to "Create job", new_job_path %>
-    </div>
+  </div>
+  <div class="footer-social-links">
+    <ul>
+        <li><a href="https://r.mtdv.me/NgVncIdipx" target="blank">
+            <i class="fab fa-facebook-f"></i>
+      </a>
+    </li><li>
+      <a href="https://r.mtdv.me/NgVncIdipx" target="blank">
+        <i class="fab fa-linkedin-in"></i>
+          </a></li>
+    <li>  <a href="https://r.mtdv.me/NgVncIdipx" target="blank">
+      <i class="fab fa-twitter"></i>
+        </a>
+      </li>
+        </ul>
+  </div>
   <div class="footer-text">
     <%= "Made with ❤️ by the team behind OffChangeX" %>
   </div>
