footer into separate div

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,8 @@
       <%= yield %>
       <%= render "shared/flashes" %>
     </div>
-    <%= render 'shared/footer' %>
+    <div class="footer">
+      <%= render 'shared/footer' %>
+    </div>
   </body>
 </html>
