--- a/app/views/shared/_booking_request_card.html.erb
+++ b/app/views/shared/_booking_request_card.html.erb
@@ -1,11 +1,17 @@
-<div class="card mb-3">
+<div class="card mb-3"  style="border-radius: 15px">
   <% case booking.status
    when "cancelled" %>
-  <div class="card-body border border-danger">
+  <div class="card-body cancelled">
+     <div class="overlay2">
+    <div class="text">Booking cancelled</div>
+      </div>
   <% when "pending" %>
   <div class="card-body border border-warning">
   <% when "completed" %>
-  <div class="card-body border border-success">
+  <div class="card-body completed">
+    <div class="overlay1">
+    <div class="text">Booking completed</div>
+  </div>
   <% when "booked" %>
   <div class="card-body border border-info">
   <% end %>
