--- a/app/views/shared/_booking_request_card.html.erb
+++ b/app/views/shared/_booking_request_card.html.erb
@@ -6,14 +6,14 @@
     <div class="text">Booking cancelled</div>
       </div>
   <% when "pending" %>
-  <div class="card-body border border-warning">
+  <div class="card-body pending">
   <% when "completed" %>
   <div class="card-body completed">
     <div class="overlay1">
     <div class="text">Booking completed</div>
   </div>
   <% when "booked" %>
-  <div class="card-body border border-info">
+  <div class="card-body booked">
   <% end %>
     <h5 class="card-title">Booking Request ID: <%= booking.id %></h5>
     <p class="card-text"><%= link_to booking.job.title, job_path(booking.job) %></p>
