--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -84,3 +84,11 @@
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
+
+body {
+  background-color: rgba(255, 245, 225, 0.8); /* Very light pastel orange color with 80% opacity */
+}
+
+.banner-container {
+  background-color: rgba(224, 224, 224, 0.8); /* Light grey pastel color with 80% opacity */
+}
