--- a/app/views/shared/_booking_card.html.erb
+++ b/app/views/shared/_booking_card.html.erb
@@ -1,5 +1,5 @@
 <a href="<%= job_path(booking.job) %>" class="card-link">
-<div class="card mb-3"  style="border-radius: 15px">
+<div class="card me-3"  style="border-radius: 15px">
   <% case booking.status
    when "cancelled" %>
   <div class="card-body cancelled">
