--- a/app/views/shared/_booking_request_card.html.erb
+++ b/app/views/shared/_booking_request_card.html.erb
@@ -3,14 +3,14 @@
    when "cancelled" %>
   <div class="card-body cancelled">
      <div class="overlay2">
-    <div class="text">Booking cancelled</div>
+    <div class="text-over">Booking cancelled</div>
       </div>
   <% when "pending" %>
   <div class="card-body pending">
   <% when "completed" %>
   <div class="card-body completed">
     <div class="overlay1">
-    <div class="text">Booking completed</div>
+    <div class="text-over">Booking completed</div>
   </div>
   <% when "booked" %>
   <div class="card-body booked">
