--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    <div class="navbar-container">
+    <div class="navbar-container sticky-top">
       <%= render "shared/navbar" %>
     </div>
 
@@ -33,4 +33,3 @@
     </div>
   </body>
 </html>
-
