--- a/app/assets/stylesheets/components/_tabs.scss
+++ b/app/assets/stylesheets/components/_tabs.scss
@@ -3,14 +3,16 @@
   margin-right: 10px;
   cursor: pointer;
   padding: 5px 10px;
-  border: 1px solid #ccc;
+  border: 1px solid transparent; 
   border-bottom: none;
 }
+
 .tab-content {
-  border: 1px solid #ccc;
+  border: 1px solid transparent;
   padding: 10px;
   display: none;
 }
+
 .active-tab {
   background-color: #eee;
 }
