--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,7 +14,7 @@
 @import "jobs/new";
 
 .job-card {
-  width: calc(33.33% - 40px); /* 40px is the combined margin and padding */
+  width: calc(33.33% - 40px);
   margin: 20px;
   padding: 15px;
   border: 1px solid #ccc;
@@ -23,6 +23,11 @@
   background-color: #fff;
   text-align: left;
   overflow: hidden;
+  transition: transform 0.3s ease-in-out;
+}
+
+.job-card:hover {
+  transform: scale(1.05);
 }
 
 @media (max-width: 768px) {
@@ -86,7 +91,11 @@
 }
 
 body {
-  background-color: rgba(255, 245, 225, 0.8); /* Very light pastel orange color with 80% opacity */
+  font-family: 'Arial', sans-serif;
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.7)), url('your-background-image.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 .banner-container {
