--- a/app/assets/stylesheets/components/_tabs.scss
+++ b/app/assets/stylesheets/components/_tabs.scss
@@ -1,16 +1,22 @@
+.tab-container {
+  text-align: center;
+}
+
 .tab {
   display: inline-block;
-  margin-right: 10px;
+  margin: 0 10px; /* Adjust margin as needed */
   cursor: pointer;
   padding: 5px 10px;
-  border: 1px solid #ccc;
+  border: 1px solid transparent;
   border-bottom: none;
 }
+
 .tab-content {
-  border: 1px solid #ccc;
+  border: 1px solid transparent;
   padding: 10px;
   display: none;
 }
+
 .active-tab {
   background-color: #eee;
 }
