--- a/app/assets/stylesheets/jobs.scss
+++ b/app/assets/stylesheets/jobs.scss
@@ -58,7 +58,6 @@
   }
 
   .dashboard-job-card {
-    /* Add any specific styles for the dashboard job card */
-    text-align: left; /* Override text-align center */
+    text-align: left; 
   }
 }
