--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -96,3 +96,20 @@ body {
   background-color: rgba(224, 224, 224, 0.8); /* Light grey pastel color with 80% opacity */
 }
 
+.homepage-text {
+  font-family: 'Arial', sans-serif;
+}
+
+.job-card h3 {
+  font-family: 'Arial', sans-serif;
+  font-weight: bold;
+}
+
+h1 {
+  font-family: 'Arial', sans-serif;
+}
+
+.dashboard-title {
+  font-family: 'Helvetica Neue', sans-serif;
+}
+
